--- a/_layouts/uni_tla_header.html
+++ b/_layouts/uni_tla_header.html
@@ -18,7 +18,7 @@ layout: doc
     <div class="container">
       <div class="">
         {{ content }}
-        {% include list-program.html %}
+        {% include list-programs.html %}
       </div>
     </div>
   </div>
