--- a/_includes/list-programs.html
+++ b/_includes/list-programs.html
@@ -15,7 +15,7 @@
   </div>
   <div class="col s12 m9">
     <p>
-      <a href="https://cst.temple.edu/academics/undergraduate-majors-and-programs/neuroscience-cellular-and-molecular">The College of Science and Technology Neuroscience-Cellular &amp; Molecular B.S.</a> Cellular and Molecular Neuroscience is designed to provide rigorous preparation in scientific knowledge at the molecular, cellular and behavioral levels to those students interested in pursuing advanced studies and professional development in neuroscience, medicine or a related field in life sciences.
+      <a href="https://www.temple.edu/academics/degree-programs/neuroscience-cellular-and-molecular-major-st-nscm-bs">The College of Science and Technology Neuroscience-Cellular &amp; Molecular B.S.</a> Cellular and Molecular Neuroscience is designed to provide rigorous preparation in scientific knowledge at the molecular, cellular and behavioral levels to those students interested in pursuing advanced studies and professional development in neuroscience, medicine or a related field in life sciences.
     </p>
   </div>
 </div>
