--- a/_includes/list-programs.html
+++ b/_includes/list-programs.html
@@ -11,7 +11,7 @@
 </div>
 <div class="program card row">
   <div class="col s12 m3">
-    <a href="https://cst.temple.edu/academics/undergraduate-majors-and-programs/neuroscience-cellular-and-molecular" target="_blank"><img src="http://dev.cla.temple.edu/temple-neuroscience/media/cst2014c.jpg" alt="Logo for Temple University's College of Scinece and Technology" style="width:90%;"></a>
+    <a href="https://www.temple.edu/academics/degree-programs/neuroscience-cellular-and-molecular-major-st-nscm-bs" target="_blank"><img src="http://dev.cla.temple.edu/temple-neuroscience/media/cst2014c.jpg" alt="Logo for Temple University's College of Scinece and Technology" style="width:90%;"></a>
   </div>
   <div class="col s12 m9">
     <p>
