--- a/_includes/list-programs.html
+++ b/_includes/list-programs.html
@@ -1,6 +1,6 @@
 <div class="program card row">
   <div class="col s12 m3">
-    <a href="https://www.cla.temple.edu/neuroscience/" target="_blank"><img src="http://dev.cla.temple.edu/temple-neuroscience/media/cla2014c.jpg" alt="Logo for Temple University's College of Liberal Arts" style="width:90%;"></a>
+    <a href="https://www.cla.temple.edu/neuroscience/" target="_blank"><img src="https://github.com/TULiberalArts/Temple-Neuroscience/blob/master/media/cla2014c.jpg" alt="Logo for Temple University's College of Liberal Arts" style="width:90%;"></a>
   </div>
 
   <div class="col s12 m9">
