--- a/_includes/list-programs.html
+++ b/_includes/list-programs.html
@@ -1,6 +1,6 @@
 <div class="program card row">
   <div class="col s12 m3">
-    <a href="https://www.cla.temple.edu/neuroscience/" target="_blank"><img src="https://github.com/TULiberalArts/Temple-Neuroscience/blob/master/media/cla2014c.jpg" alt="Logo for Temple University's College of Liberal Arts" style="width:90%;"></a>
+    <a href="https://www.cla.temple.edu/neuroscience/" target="_blank"><img src="https://liberalarts.temple.edu/sites/liberalarts/files/cla2014c.jpg" alt="Logo for Temple University's College of Liberal Arts" style="width:90%;"></a>
   </div>
 
   <div class="col s12 m9">
@@ -11,7 +11,7 @@
 </div>
 <div class="program card row">
   <div class="col s12 m3">
-    <a href="https://www.temple.edu/academics/degree-programs/neuroscience-cellular-and-molecular-major-st-nscm-bs" target="_blank"><img src="http://dev.cla.temple.edu/temple-neuroscience/media/cst2014c.jpg" alt="Logo for Temple University's College of Scinece and Technology" style="width:90%;"></a>
+    <a href="https://www.temple.edu/academics/degree-programs/neuroscience-cellular-and-molecular-major-st-nscm-bs" target="_blank"><img src="https://liberalarts.temple.edu/sites/liberalarts/files/cst2014c.jpg" alt="Logo for Temple University's College of Scinece and Technology" style="width:90%;"></a>
   </div>
   <div class="col s12 m9">
     <p>
@@ -21,7 +21,7 @@
 </div>
 <div class="program card row">
   <div class="col s12 m3">
-    <a href="https://medicine.temple.edu/education/biomedical-sciences-graduate-program/areas-concentration/neurosciences" target="_blank"><img src="http://dev.cla.temple.edu/temple-neuroscience/media/med2014c.jpg" alt="Logo for Temple University's School of Medicine" style="width:90%;"></a>
+    <a href="https://medicine.temple.edu/education/biomedical-sciences-graduate-program/areas-concentration/neurosciences" target="_blank"><img src="https://liberalarts.temple.edu/sites/liberalarts/files/med2014c.jpg" alt="Logo for Temple University's School of Medicine" style="width:90%;"></a>
   </div>
   <div class="col s12 m9">
     <p>
