fix up relative media

--- a/_includes/list-programs.html
+++ b/_includes/list-programs.html
@@ -1,6 +1,6 @@
 <div class="program card row">
   <div class="col s12 m3">
-    <a href="https://www.cla.temple.edu/neuroscience/" target="_blank"><img src="https://liberalarts.temple.edu/sites/liberalarts/files/cla2014c.jpg" alt="Logo for Temple University's College of Liberal Arts" style="width:90%;"></a>
+    <a href="https://www.cla.temple.edu/neuroscience/" target="_blank"><img src="media/cla2014c.jpg" alt="Logo for Temple University's College of Liberal Arts" style="width:90%;"></a>
   </div>
 
   <div class="col s12 m9">
@@ -11,7 +11,7 @@
 </div>
 <div class="program card row">
   <div class="col s12 m3">
-    <a href="https://www.temple.edu/academics/degree-programs/neuroscience-cellular-and-molecular-major-st-nscm-bs" target="_blank"><img src="https://liberalarts.temple.edu/sites/liberalarts/files/cst2014c.jpg" alt="Logo for Temple University's College of Scinece and Technology" style="width:90%;"></a>
+    <a href="https://www.temple.edu/academics/degree-programs/neuroscience-cellular-and-molecular-major-st-nscm-bs" target="_blank"><img src="media/cst2014c.jpg" alt="Logo for Temple University's College of Scinece and Technology" style="width:90%;"></a>
   </div>
   <div class="col s12 m9">
     <p>
@@ -21,13 +21,13 @@
 </div>
 <div class="program card row">
   <div class="col s12 m3">
-    <a href="https://medicine.temple.edu/education/biomedical-sciences-graduate-program/areas-concentration/neurosciences" target="_blank"><img src="https://liberalarts.temple.edu/sites/liberalarts/files/med2014c.jpg" alt="Logo for Temple University's School of Medicine" style="width:90%;"></a>
+    <a href="https://medicine.temple.edu/education/biomedical-sciences-graduate-program/areas-concentration/neurosciences" target="_blank"><img src="media/med2014c.jpg" alt="Logo for Temple University's School of Medicine" style="width:90%;"></a>
   </div>
   <div class="col s12 m9">
     <p>
       <a href="https://medicine.temple.edu/education/biomedical-sciences-graduate-program/areas-concentration/neurosciences">
 Lewis Katz School of Medicine Biomedical Sciences Program with Neurosciences Concentration</a>
 The Neuroscience cluster is an educational working group, supporting PhD, MD/PhD, and MS educational/research programs within Lewis Katz School of Medicine at Temple University’s Biomedical Sciences Graduate Program. This cluster provides thematic courses, research opportunities, and educational activities related to neuroscience, bringing together faculty members from basic science and clinical departments, as well as research centers—Center of Substance Abuse, Center for Neurovirology and Comprehensive NeuroAIDS Center, and Shriner’s Hospitals Pediatric Research Center.
-    </p> 
+    </p>
   </div>
 </div>
