--- a/_includes/headers/tla-header.html
+++ b/_includes/headers/tla-header.html
@@ -15,7 +15,7 @@
             <div class="mast">
 
               <div class="breadcrumbs">
-                <a href="https://www.temple.edu/academics/schools-and-colleges" class="breadcrumb">Explore Temple Univeristy</a>
+                <a href="https://www.temple.edu/academics/schools-and-colleges" class="breadcrumb">Explore Temple University</a>
 
               </div>
               <h1 class="header-title">{{ site.title }}</h1>
