updated cla program text

--- a/_includes/list-programs.html
+++ b/_includes/list-programs.html
@@ -5,7 +5,7 @@
 
   <div class="col s12 m9">
     <p>
-      <a href="http://www.cla.temple.edu/neuroscience/">The College of Liberal Arts Neuroscience Program</a> Our neuroscience degree program teaches students to explore neural and brain function at multiple levels in a rapidly growing field. Our students study the neural basis of addiction, developmental disorders, ADHD, depression, anxiety, age-related disorders and much more.
+      <a href="http://www.cla.temple.edu/neuroscience/">The College of Liberal Arts Neuroscience Program</a> Our B.S. degree in Neuroscience: Systems, Behavior, and Plasticity explores neural and brain function at multiple levels. We also offer a minor in Neuroscience Research, a 2-year Master’s program, a +1 Accelerated Master’s program (for current Temple Undergraduates) and a Graduate Specialization in Neuroscience that is open to doctoral students across Temple.
     </p>
   </div>
 </div>
