update program url for liberal arts

--- a/_includes/list-programs.html
+++ b/_includes/list-programs.html
@@ -1,11 +1,11 @@
 <div class="program card row">
   <div class="col s12 m3">
-    <a href="https://www.cla.temple.edu/neuroscience/" target="_blank"><img src="media/cla2014c.jpg" alt="Logo for Temple University's College of Liberal Arts" style="width:90%;"></a>
+    <a href="https://liberalarts.temple.edu/academics/departments-and-programs/neuroscience" target="_blank"><img src="media/cla2014c.jpg" alt="Logo for Temple University's College of Liberal Arts" style="width:90%;"></a>
   </div>
 
   <div class="col s12 m9">
     <p>
-      <a href="http://www.cla.temple.edu/neuroscience/">The College of Liberal Arts Neuroscience Program</a> Our B.S. degree in Neuroscience: Systems, Behavior, and Plasticity explores neural and brain function at multiple levels. We also offer a minor in Neuroscience Research, a 2-year Master’s program, a +1 Accelerated Master’s program (for current Temple Undergraduates) and a Graduate Specialization in Neuroscience that is open to doctoral students across Temple.
+      <a href="https://liberalarts.temple.edu/academics/departments-and-programs/neuroscience">The College of Liberal Arts Neuroscience Program</a> Our B.S. degree in Neuroscience: Systems, Behavior, and Plasticity explores neural and brain function at multiple levels. We also offer a minor in Neuroscience Research, a 2-year Master’s program, a +1 Accelerated Master’s program (for current Temple Undergraduates) and a Graduate Specialization in Neuroscience that is open to doctoral students across Temple.
     </p>
   </div>
 </div>
